2023-11-04T01:16:13Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751833408 # 925
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
* notice: last 14d: unq all: 2 33
* notice: prev accum: outdated-unq outdated-all / unq all: 275 582 / 292 620
* notice: next accum: outdated-unq outdated-all / unq all: 277 586 / 292 620
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -1 / +1 +3 -0 -1 / 1 2
* notice: removed / changed dates: [2023-10-20] / [2023-10-21]

2023-11-03T16:23:11Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6747763500 # 924
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 275 582 / 292 619
* notice: next accum: outdated-unq outdated-all / unq all: 275 582 / 292 620
* notice: prev exec diff / last date diff / accum: unq all: +0 +1 -0 -1 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-11-03T08:22:02Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6742822771 # 923
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-03
* notice: last 14d: unq all: 2 35
* notice: prev accum: outdated-unq outdated-all / unq all: 275 582 / 291 618
* notice: next accum: outdated-unq outdated-all / unq all: 275 582 / 292 619
* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -1 -2 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [] / [2023-10-20 2023-11-03]

2023-11-02T16:24:14Z: