@@ -1,8 +1,8 @@
 {
   "timestamp" : "2023-11-04T08:20:03Z",
   "count" : 1,
-  "count_minmax" : [ 1, 3 ],
-  "count_decinc" : [ -2, +3 ],
+  "count_minmax" : [ 1, 1 ],
+  "count_decinc" : [ -0, +1 ],
   "uniques" : 1,
   "uniques_minmax" : [ 1, 1 ],
   "uniques_decinc" : [ -0, +1 ]
