@@ -1,15 +1,15 @@
 {
-  "timestamp" : "2023-11-04T01:16:13Z",
+  "timestamp" : "2023-11-04T08:20:03Z",
   "count_outdated" : 586,
   "uniques_outdated" : 277,
-  "count" : 620,
-  "uniques" : 292,
+  "count" : 621,
+  "uniques" : 293,
   "clones" : [
     {
       "timestamp": "2023-10-21T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 2, 3 ],
-      "count_decinc": [ 1, 3 ],
+      "count": 1,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 2, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -127,6 +127,15 @@
       "count": 2,
       "count_minmax": [ 1, 2 ],
       "count_decinc": [ 0, 2 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
+    },
+    {
+      "timestamp": "2023-11-04T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
