@@ -1,3 +1,12 @@
+2023-11-04T08:20:03Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6753739094 # 926
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
+* notice: last 14d: unq all: 2 33
+* notice: prev accum: outdated-unq outdated-all / unq all: 277 586 / 292 620
+* notice: next accum: outdated-unq outdated-all / unq all: 277 586 / 293 621
+* notice: prev exec diff / last date diff / accum: unq all: +1 +1 -0 -1 / +1 +1 -0 -0 / 1 1
+* notice: removed / changed dates: [] / [2023-10-21 2023-11-04]
+
 2023-11-04T01:16:13Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/andry81-devops/actions/runs/6751833408 # 925
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--check-os-version--gh-stats/commits?branch=master&time_zone=utc&until=2023-11-04
